projects/vb6parse/snapshots/tests/library/graphics/qbcolor/qbcolor_debug_print.snap
---
source: projects/vb6parse/tests/library/graphics/qbcolor.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"RGB Value: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: QBColor
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "14"
                        - kind: RightParenthesis
                          text: )
        - kind: Newline
          text: "\n"
